# RESTettaStone

./: Makefile  Makefile.aws  Makefile.backend  Makefile.cicd  Makefile.frontend  Makefile.grpc  Makefile.mq  README.md  docker-compose.yml  main.py  requirements.txt
backend/actixapp/: Cargo.toml  Dockerfile
backend/actixapp/src/: constants.rs  routes.rs  schema.rs  user_controller.rs  user_model.rs  user_service.rs
backend/aspnetapp/: Startup.cs
backend/bunapp/: index.js  package.json
backend/clojureapp/: Dockerfile  project.clj
backend/crowapp/: CMakeLists.txt  Dockerfile  main.cpp
backend/fatfreeapp/: composer.json
backend/firebaseapp/: Dockerfile  app.js  package.json
backend/flaskapp/: Dockerfile  main.py  requirements.txt
backend/fsharpapp/: Database.fs  FSharpApp.fsproj  Program.fs
backend/haskellapp/: Dockerfile  package.yaml  stack.yaml
backend/laravelapp/: composer.sh  webpack.mix.js
backend/nodeapp/: Dockerfile
backend/perlapp/: index.pl  temp.pl
backend/phpapp/: Dockerfile  app.php
backend/playapp/: build.sbt
backend/prologapp/: main.pl
backend/railsapp/: Gemfile
backend/rocketapp/: Cargo.toml  Dockerfile
backend/rust/rocketapp/: Cargo.toml  Dockerfile  entrypoint.sh
backend/rust/rocketapp/src/: main.rs
backend/springbootapp/: Dockerfile
backend/swiftapp/: Dockerfile  Package.swift
backend/symfonyapp/: Dockerfile
backend/tomcatapp/: Dockerfile  pom.xml
backend/zigapp/: Dockerfile
frontend/angularapp/: Dockerfile  README.md  angular.json  package.json  tsconfig.app.json  (+1 more)
other/: pg_data.json  populate_pg_db.py
(+378 files in other folders)
